/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package hbase.test.pb;
// Coprocessor test
option java_package = "org.apache.hadoop.hbase.coprocessor.protobuf.generated";
option java_outer_classname = "PingProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

message PingRequest {
}

message PingResponse {
  required string pong = 1;
}

message CountRequest {
}

message CountResponse {
  required int32 count = 1;
}

message IncrementCountRequest {
  required int32 diff = 1;
}

message IncrementCountResponse {
  required int32 count = 1;
}

message HelloRequest {
  optional string name = 1;
}

message HelloResponse {
  optional string response = 1;
}

message NoopRequest {
}

message NoopResponse {
}

service PingService {
  rpc ping(PingRequest) returns(PingResponse);
  rpc count(CountRequest) returns(CountResponse);
  rpc increment(IncrementCountRequest) returns(IncrementCountResponse);
  rpc hello(HelloRequest) returns(HelloResponse);
  rpc noop(NoopRequest) returns(NoopResponse);
}
